Refactored getColumnValue function in boardDragAndDrop and fixed an issue where the up and down buttons in mobile version where not showing.

--- a/styles/responsivness.css
+++ b/styles/responsivness.css
@@ -283,6 +283,10 @@
     display: flex;
   }
 
+  .mobile-navigation-div .mobile-hide {
+    display: flex;
+  }
+
   .kanban-board,
   .board-header {
     padding: 0;
